--- a/src/app/details-form/details-form.component.html
+++ b/src/app/details-form/details-form.component.html
@@ -121,12 +121,49 @@
                                     [(ngModel)]="value2" class="form-control"
                                     [ngClass]="{ 'is-invalid': submitted && f.branch.errors }">
                                     <option value="">Choose...</option>
-                                    <option value="M.E COMMUNICATION SYSTEMS">M.E COMMUNICATION SYSTEMS</option>
-                                    <option value="M.E COMPUTER AIDED DESIGN">M.E COMPUTER AIDED DESIGN</option>
-                                    <option value="ME POWER ELECTRONICS & DRIVES">ME POWER ELECTRONICS & DRIVES</option>
-                                    <option value="M.E STRUCTURAL ENGINEERING">M.E STRUCTURAL ENGINEERING</option>
-                                    <option value="M.E THERMAL ENGINEERING">M.E THERMAL ENGINEERING</option>
-                                    <option value="M.E WELDING TECHNOLOGY">M.E WELDING TECHNOLOGY</option>
+                                    <option value="M.E Applied Electronics">M.E Applied Electronics</option>
+                                    <option value="M.E COMMUNICATION SYSTEMS">M.E Communicaton Systems</option>
+                                    <option value="M.E Computer Integrated Manufacturing">M.E Computer Integrated
+                                        Manufacturing</option>
+                                    <option value="M.E Construction Engg. and Management">M.E Construction Engg. and
+                                        Management</option>
+                                    <option value="M.E Computer Science and Engineering">M.E Computer Science and
+                                        Engineering</option>
+                                    <option value="M.E Control & Instrumentation Engineering">M.E Control &
+                                        Instrumentation Engineering</option>
+                                    <option value="M.E COMPUTER AIDED DESIGN">M.E Computer Aided Design</option>
+                                    <option value="M.E Energy Engineering">M.E Energy Engineering</option>
+                                    <option value="M.E Engineering Design">M.E Engineering Design</option>
+                                    <option value="M.E Environmental Engineering">M.E Environmental Engineering</option>
+                                    <option value="M.E High Voltage Engineering">M.E High Voltage Engineering</option>
+                                    <option value="M.E Hydrology and Water Resources Engg.">M.E Hydrology and Water
+                                        Resources Engg.</option>
+                                    <option value="M.E Industrial Engineering">M.E Industrial Engineering</option>
+                                    <option value="M.E Internal Combustion Engineering">M.E Internal Combustion
+                                        Engineering</option>
+                                    <option value="M.E Irrigation Water Management">M.E Irrigation Water Management
+                                    </option>
+                                    <option value="M.E Medical Electronics">M.E Medical Electronics</option>
+                                    <option value="ME POWER ELECTRONICS & DRIVES">ME Power Electronics & Drivers
+                                    </option>
+                                    <option value="M.E Power Systems Engineering">M.E Power Systems Engineering</option>
+                                    <option value="M.E THERMAL ENGINEERING">M.E Thermal Engineering</option>
+                                    <option value="M.E Remote Sensing and Geomatics">M.E Remote Sensing and Geomatics
+                                    </option>
+                                    <option value="M.E Software Engineering">M.E Software Engineering</option>
+                                    <option value="M.E Soil Mechanics and Foundation Engg.">M.E Soil Mechanics and
+                                        Foundation Engg.</option>
+                                    <option value="M.E Transportation Engineering">M.E Transportation Engineering
+                                    </option>
+                                    <option value="M.E STRUCTURAL ENGINEERING">M.E Structural Engineering</option>
+                                    <option value="M.E WELDING TECHNOLOGY">M.E Welding Technology</option>
+                                    <option value="M.E Geo Technical Engineering">M.E Geo Technical Engineering</option>
+                                    <option value="M.E Manufacturing Engineering">M.E Manufacturing Engineering</option>
+                                    <option value="M.E Power Electronics & Drives">M.E Power Electronics & Drives
+                                    </option>
+                                    <option value="M.E Power Systems Engineering">M.E Power Systems Engineering</option>
+                                    <option value="M.E VLSI Design">M.E VLSI Design</option>
+
                                 </select>
                                 <div *ngIf="submitted && f.branch.errors" class="invalid-feedback">
                                     <div *ngIf="f.branch.errors.required">Course Name is required</div>
