all college components added

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -54,11 +54,11 @@
 <router-outlet></router-outlet>
 
 
-<app-college-name *ngIf="SignedIn" (isLogout)="Logout()"></app-college-name>
+<app-gce-salem *ngIf="SignedIn" (isLogout)="Logout()"></app-gce-salem>
 
-<app-gct-clg *ngIf="gct"></app-gct-clg>
+<app-gct-coimbatore *ngIf="gct"></app-gct-coimbatore>
 
-<app-psg-clg *ngIf="psg"></app-psg-clg>
+<app-psg-coimbatore *ngIf="psg"></app-psg-coimbatore>
 
 <app-alagapa *ngIf="alagapa"></app-alagapa>
 
