some college details added

--- a/src/app/colleges/alagapa/alagapa.component.html
+++ b/src/app/colleges/alagapa/alagapa.component.html
@@ -53,7 +53,7 @@
                 <div class="college-name">
                     Alagappa Chettair Government
                     College of Engineering and
-                    Technology, (Autonomous),
+                    Technology, (Autonomous)
                 </div>
             </div>
             <br>
