--- a/src/app/colleges/gce-salem/gce-salem.component.html
+++ b/src/app/colleges/gce-salem/gce-salem.component.html
@@ -7,7 +7,7 @@
         <div *ngIf="toggleStyle" class="cont-navbar">
             <table>
                 <tr class="active">
-                    <td class="table1">Notification 1
+                    <td class="table1">GO NUMBER 2020_15-11-2021
                     </td>
                 </tr>
                 <tr>
@@ -85,7 +85,7 @@
             </div>
             <br>
             <br>
-            <h1 style="text-decoration: underline;">Contact :</h1>
+            <h1 style="text-decoration: underline;" class="contact_align">Contact :</h1>
             <br>
             <div class="college-cont" style="text-align: center;">
                 <table class=" table-borderless">
@@ -98,7 +98,7 @@
                         <tr>
                             <td id="tab-1">Principle Name</td>
                             <td id="tab-2">:</td>
-                            <td id="tab-3">Dr.C.VASANTHANAYAKI (Phno : 9487564005)</td>
+                            <td id="tab-3">Dr.Malayalamuruthi (Phno : 9443441416)</td>
                         </tr>
                         <tr>
                             <td id="tab-1">College Contact No</td>
