--- a/src/app/colleges/gct-coimbatore/gct-coimbatore.component.html
+++ b/src/app/colleges/gct-coimbatore/gct-coimbatore.component.html
@@ -51,7 +51,9 @@
         <div class="cont-rows">
             <div class="college" style="text-align: center;">
                 <div class="college-name">
-                    2615 - Government College of Engineering(Autonomous)
+                    Government college of
+                    Technology, (Autonomous),
+                    Coimbatore
                 </div>
             </div>
             <br>
