--- a/src/app/colleges/psg-coimbatore/psg-coimbatore.component.html
+++ b/src/app/colleges/psg-coimbatore/psg-coimbatore.component.html
@@ -51,7 +51,8 @@
         <div class="cont-rows">
             <div class="college" style="text-align: center;">
                 <div class="college-name">
-                    2615 - Government College of Engineering(Autonomous)
+                    PSG College of Technology,
+                    Coimbatore
                 </div>
             </div>
             <br>
