--- a/src/app/details-form/details-form.component.html
+++ b/src/app/details-form/details-form.component.html
@@ -13,7 +13,7 @@
         <div *ngIf="toggleStyle" class="cont-navbar">
             <table>
                 <tr class="active">
-                    <td class="table1">Notification 1
+                    <td class="table1">GO NUMBER 2020_15-11-2021
                     </td>
                 </tr>
                 <tr>
