--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-<div *ngIf="!SignedIn && !gct && !psg && !alagapa">
+<div
+    *ngIf="!act_chennai && !alagapa && !anna_university_coimbatore && !anna_university_madurai && !anna_university_tirunelveli && !gce_salem && !gct_coimabatore && !psg_coimbatore ">
 
     <div class="portal-container" style="width: 100%; text-align: center;">
         <p style=" font-size: 30px; color: green; font-weight: 600;">Online Post Graduate Assistantship and Non-Gate PG
@@ -53,14 +54,21 @@
 </div>
 <router-outlet></router-outlet>
 
-
-<app-gce-salem *ngIf="SignedIn" (isLogout)="Logout()"></app-gce-salem>
-
-<app-gct-coimbatore *ngIf="gct"></app-gct-coimbatore>
-
-<app-psg-coimbatore *ngIf="psg"></app-psg-coimbatore>
+<app-act-chennai *ngIf="act_chennai"></app-act-chennai>
 
 <app-alagapa *ngIf="alagapa"></app-alagapa>
+
+<app-anna-university-coimbatore *ngIf="anna_university_coimbatore"></app-anna-university-coimbatore>
+
+<app-anna-university-madurai *ngIf="anna_university_madurai"></app-anna-university-madurai>
+
+<app-anna-university-tirunelveli *ngIf="anna_university_tirunelveli"></app-anna-university-tirunelveli>
+
+<app-gce-salem *ngIf="gce_salem" (isLogout)="Logout()"></app-gce-salem>
+
+<app-gct-coimbatore *ngIf="gct_coimabatore"></app-gct-coimbatore>
+
+<app-psg-coimbatore *ngIf="psg_coimbatore"></app-psg-coimbatore>
 
 
 <!-- *ngIf="SignedIn" -->
