--- a/src/app/colleges/alagapa/alagapa.component.html
+++ b/src/app/colleges/alagapa/alagapa.component.html
@@ -105,9 +105,13 @@
                         <tr>
                             <td id="tab-1">College Contact No</td>
                             <td id="tab-2">:</td>
-                            <td id="tab-3">0427-2346157</td>
+                            <td id="tab-3">04565-224528</td>
                         </tr>
-
+                        <tr>
+                            <td id="tab-1">Email-ID</td>
+                            <td id="tab-2">:</td>
+                            <td id="tab-3">accetssection@gmail.com</td>
+                        </tr>
                     </tbody>
                 </table>
             </div>
