--- a/src/app/colleges/ceg-guindy/ceg-guindy.component.html
+++ b/src/app/colleges/ceg-guindy/ceg-guindy.component.html
@@ -51,9 +51,7 @@
         <div class="cont-rows">
             <div class="college" style="text-align: center;">
                 <div class="college-name">
-                    Alagappa Chettair Government
-                    College of Engineering and
-                    Technology, (Autonomous)
+                    University Departments of Anna University, CEG Campus, Guindy, Chennai-600025
                 </div>
             </div>
             <br>
@@ -105,9 +103,13 @@
                         <tr>
                             <td id="tab-1">College Contact No</td>
                             <td id="tab-2">:</td>
-                            <td id="tab-3">0427-2346157</td>
+                            <td id="tab-3">044-22358491</td>
                         </tr>
-
+                        <tr>
+                            <td id="tab-1">Email-ID</td>
+                            <td id="tab-2">:</td>
+                            <td id="tab-3">deanceg@annauniv.edu</td>
+                        </tr>
                     </tbody>
                 </table>
             </div>
