--- a/src/app/colleges/cit-coimbatore/cit-coimbatore.component.html
+++ b/src/app/colleges/cit-coimbatore/cit-coimbatore.component.html
@@ -51,9 +51,7 @@
         <div class="cont-rows">
             <div class="college" style="text-align: center;">
                 <div class="college-name">
-                    Alagappa Chettair Government
-                    College of Engineering and
-                    Technology, (Autonomous)
+                    Coimbatore Institute of Technology, (Autonomous) Coimbatore-641014
                 </div>
             </div>
             <br>
@@ -105,9 +103,13 @@
                         <tr>
                             <td id="tab-1">College Contact No</td>
                             <td id="tab-2">:</td>
-                            <td id="tab-3">0427-2346157</td>
+                            <td id="tab-3">0422-2574071</td>
                         </tr>
-
+                        <tr>
+                            <td id="tab-1">Email-ID</td>
+                            <td id="tab-2">:</td>
+                            <td id="tab-3">principal@cit.edu.in</td>
+                        </tr>
                     </tbody>
                 </table>
             </div>
