--- a/src/app/colleges/gce-salem/gce-salem.component.html
+++ b/src/app/colleges/gce-salem/gce-salem.component.html
@@ -51,7 +51,7 @@
         <div class="cont-rows">
             <div class="college" style="text-align: center;">
                 <div class="college-name">
-                    2615 - Government College of Engineering(Autonomous)
+                    Government college of Engineering and Technology, (Autonomous), Salem-636011
                 </div>
             </div>
             <br>
@@ -80,6 +80,11 @@
                             <td id="tab-2">:</td>
                             <td id="tab-3">636011</td>
                         </tr>
+                        <tr>
+                            <td id="tab-1">Email-ID</td>
+                            <td id="tab-2">:</td>
+                            <td id="tab-3">prinicipal@gcesalem.edu.in</td>
+                        </tr>
                     </tbody>
                 </table>
             </div>
@@ -103,7 +108,7 @@
                         <tr>
                             <td id="tab-1">College Contact No</td>
                             <td id="tab-2">:</td>
-                            <td id="tab-3">0427-2346157</td>
+                            <td id="tab-3">0427-2346102 </td>
                         </tr>
 
                     </tbody>
