--- a/src/app/colleges/gce-tirunelveli/gce-tirunelveli.component.html
+++ b/src/app/colleges/gce-tirunelveli/gce-tirunelveli.component.html
@@ -51,9 +51,7 @@
         <div class="cont-rows">
             <div class="college" style="text-align: center;">
                 <div class="college-name">
-                    Government college of
-                    Technology, (Autonomous),
-                    Coimbatore
+                    Government college of Engineering, Tirunelveli-627007
                 </div>
             </div>
             <br>
@@ -105,9 +103,13 @@
                         <tr>
                             <td id="tab-1">College Contact No</td>
                             <td id="tab-2">:</td>
-                            <td id="tab-3">0427-2346157</td>
+                            <td id="tab-3">04622552450</td>
                         </tr>
-
+                        <tr>
+                            <td id="tab-1">Email-ID</td>
+                            <td id="tab-2">:</td>
+                            <td id="tab-3">gceoffice@yahoo.com</td>
+                        </tr>
                     </tbody>
                 </table>
             </div>
