--- a/src/app/colleges/periyar-vellor/periyar-vellor.component.html
+++ b/src/app/colleges/periyar-vellor/periyar-vellor.component.html
@@ -51,9 +51,7 @@
         <div class="cont-rows">
             <div class="college" style="text-align: center;">
                 <div class="college-name">
-                    Government college of
-                    Technology, (Autonomous),
-                    Coimbatore
+                    Thanthai Periyar Government institute of Technology, (Autonomous), Vellore-632002
                 </div>
             </div>
             <br>
@@ -105,9 +103,13 @@
                         <tr>
                             <td id="tab-1">College Contact No</td>
                             <td id="tab-2">:</td>
-                            <td id="tab-3">0427-2346157</td>
+                            <td id="tab-3">0416-2267762</td>
                         </tr>
-
+                        <tr>
+                            <td id="tab-1">Email-ID</td>
+                            <td id="tab-2">:</td>
+                            <td id="tab-3">principaltpgit@gmail.com</td>
+                        </tr>
                     </tbody>
                 </table>
             </div>
