--- a/src/app/colleges/thiagarajar-madurai/thiagarajar-madurai.component.html
+++ b/src/app/colleges/thiagarajar-madurai/thiagarajar-madurai.component.html
@@ -51,8 +51,7 @@
         <div class="cont-rows">
             <div class="college" style="text-align: center;">
                 <div class="college-name">
-                    PSG College of Technology,
-                    Coimbatore
+                    Thiagarajar College of Engineering, (Autonomous) Madurai-625015
                 </div>
             </div>
             <br>
@@ -104,9 +103,13 @@
                         <tr>
                             <td id="tab-1">College Contact No</td>
                             <td id="tab-2">:</td>
-                            <td id="tab-3">0427-2346157</td>
+                            <td id="tab-3">0452-2482240</td>
                         </tr>
-
+                        <tr>
+                            <td id="tab-1">Email-ID</td>
+                            <td id="tab-2">:</td>
+                            <td id="tab-3">principal@tce.edu</td>
+                        </tr>
                     </tbody>
                 </table>
             </div>
