--- a/src/app/colleges/act-chennai/act-chennai.component.html
+++ b/src/app/colleges/act-chennai/act-chennai.component.html
@@ -51,9 +51,9 @@
         <div class="cont-rows">
             <div class="college" style="text-align: center;">
                 <div class="college-name">
-                    Alagappa Chettair Government
-                    College of Engineering and
-                    Technology, (Autonomous)
+                    University Departments of Anna
+                    University, ACT Campus,
+                    Guindy, Chennai-600025
                 </div>
             </div>
             <br>
@@ -105,9 +105,13 @@
                         <tr>
                             <td id="tab-1">College Contact No</td>
                             <td id="tab-2">:</td>
-                            <td id="tab-3">0427-2346157</td>
+                            <td id="tab-3">044-22359101</td>
                         </tr>
-
+                        <tr>
+                            <td id="tab-1">Email-ID</td>
+                            <td id="tab-2">:</td>
+                            <td id="tab-3">deanact@annauniv.edu</td>
+                        </tr>
                     </tbody>
                 </table>
             </div>
