--- a/src/app/colleges/anna-university-tirunelveli/anna-university-tirunelveli.component.html
+++ b/src/app/colleges/anna-university-tirunelveli/anna-university-tirunelveli.component.html
@@ -51,9 +51,7 @@
         <div class="cont-rows">
             <div class="college" style="text-align: center;">
                 <div class="college-name">
-                    Alagappa Chettair Government
-                    College of Engineering and
-                    Technology, (Autonomous)
+                    Anna University Regional Campus, Tirunelveli-627007
                 </div>
             </div>
             <br>
@@ -105,9 +103,13 @@
                         <tr>
                             <td id="tab-1">College Contact No</td>
                             <td id="tab-2">:</td>
-                            <td id="tab-3">0427-2346157</td>
+                            <td id="tab-3">0462-2551298</td>
                         </tr>
-
+                        <tr>
+                            <td id="tab-1">Email-ID</td>
+                            <td id="tab-2">:</td>
+                            <td id="tab-3">deanoffice@auttvl.ac.in</td>
+                        </tr>
                     </tbody>
                 </table>
             </div>
