--- a/src/app/colleges/mit-chennai/mit-chennai.component.html
+++ b/src/app/colleges/mit-chennai/mit-chennai.component.html
@@ -51,9 +51,7 @@
         <div class="cont-rows">
             <div class="college" style="text-align: center;">
                 <div class="college-name">
-                    Government college of
-                    Technology, (Autonomous),
-                    Coimbatore
+                    University Departments of Anna University, MIT Campus, Guindy, Chennai-600025
                 </div>
             </div>
             <br>
@@ -105,9 +103,13 @@
                         <tr>
                             <td id="tab-1">College Contact No</td>
                             <td id="tab-2">:</td>
-                            <td id="tab-3">0427-2346157</td>
+                            <td id="tab-3">044-22516002</td>
                         </tr>
-
+                        <tr>
+                            <td id="tab-1">Email-ID</td>
+                            <td id="tab-2">:</td>
+                            <td id="tab-3">deanmitt@annauniv.edu</td>
+                        </tr>
                     </tbody>
                 </table>
             </div>
