--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <div
-    *ngIf="!act_chennai && !alagapa && !anna_university_coimbatore && !anna_university_madurai && !anna_university_tirunelveli && !gce_salem && !gct_coimabatore && !psg_coimbatore ">
+    *ngIf="!act_chennai && !alagapa && !anna_university_coimbatore && !anna_university_madurai && !anna_university_tirunelveli && !ceg_guindy && !cit_coimbatore && !gce_bargur && !gce_erode && !gce_salem && !gce_thirunelveli && !gct_coimabatore && !mit_chennai && !periyar_vellor && !psg_coimbatore && !thiagarajar_madurai">
 
     <div class="portal-container" style="width: 100%; text-align: center;">
         <p style=" font-size: 30px; color: green; font-weight: 600;">Online Post Graduate Assistantship and Non-Gate PG
@@ -64,11 +64,27 @@
 
 <app-anna-university-tirunelveli *ngIf="anna_university_tirunelveli"></app-anna-university-tirunelveli>
 
+<app-ceg-guindy *ngIf="ceg_guindy"></app-ceg-guindy>
+
+<app-cit-coimbatore *ngIf="cit_coimbatore"></app-cit-coimbatore>
+
+<app-gce-bargur *ngIf="gce_bargur"></app-gce-bargur>
+
+<app-gce-erode *ngIf="gce_erode"></app-gce-erode>
+
 <app-gce-salem *ngIf="gce_salem" (isLogout)="Logout()"></app-gce-salem>
+
+<app-gce-tirunelveli *ngIf="gce_thirunelveli"></app-gce-tirunelveli>
 
 <app-gct-coimbatore *ngIf="gct_coimabatore"></app-gct-coimbatore>
 
+<app-mit-chennai *ngIf="mit_chennai"></app-mit-chennai>
+
+<app-periyar-vellor *ngIf="periyar_vellor"></app-periyar-vellor>
+
 <app-psg-coimbatore *ngIf="psg_coimbatore"></app-psg-coimbatore>
+
+<app-thiagarajar-madurai *ngIf="thiagarajar_madurai"></app-thiagarajar-madurai>
 
 
 <!-- *ngIf="SignedIn" -->
