--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <div
-    *ngIf="!act_chennai && !alagapa && !anna_university_coimbatore && !anna_university_madurai && !anna_university_tirunelveli && !ceg_guindy && !cit_coimbatore && !gce_bargur && !gce_erode && !gce_salem && !gce_thirunelveli && !gct_coimabatore && !mit_chennai && !periyar_vellor && !psg_coimbatore && !thiagarajar_madurai">
+    *ngIf="!act_chennai && !alagapa && !anna_university_coimbatore && !anna_university_madurai && !anna_university_tirunelveli && !ceg_guindy && !cit_coimbatore && !gce_bargur && !gce_erode && !gce_salem && !gce_thirunelveli && !gct_coimabatore && !mit_chennai && !periyar_vellor && !psg_coimbatore && !thiagarajar_madurai && !university_ariyalur && !university_dindigul && !university_kanchepuram  && !university_nagercoil && !university_panruti  && !university_pattukodai && !university_ramanathapuram && !university_thiruchirappali  && !university_thirukkuvalai && !university_thiruvannamalai && !university_thoothukudi && !university_villupuram">
 
     <div class="portal-container" style="width: 100%; text-align: center;">
         <p style=" font-size: 30px; color: green; font-weight: 600;">Online Post Graduate Assistantship and Non-Gate PG
@@ -85,6 +85,32 @@
 <app-psg-coimbatore *ngIf="psg_coimbatore"></app-psg-coimbatore>
 
 <app-thiagarajar-madurai *ngIf="thiagarajar_madurai"></app-thiagarajar-madurai>
+
+<app-university-ariyalur *ngIf="university_ariyalur"></app-university-ariyalur>
+
+<app-university-dindigul *ngIf="university_dindigul"></app-university-dindigul>
+
+<app-university-kanchepuram *ngIf="university_kanchepuram"></app-university-kanchepuram>
+
+<app-university-nagercoil *ngIf="university_nagercoil"></app-university-nagercoil>
+
+<app-university-panruti *ngIf="university_panruti"></app-university-panruti>
+
+<app-university-pattukodai *ngIf="university_pattukodai"></app-university-pattukodai>
+
+<app-university-ramanathapuram *ngIf="university_ramanathapuram"></app-university-ramanathapuram>
+
+<app-university-thindivanam *ngIf="university_thindivanam"></app-university-thindivanam>
+
+<app-university-thiruchirappalli *ngIf="university_thiruchirappali"></app-university-thiruchirappalli>
+
+<app-university-thirukkuvalai *ngIf="university_thirukkuvalai"></app-university-thirukkuvalai>
+
+<app-university-thiruvannamalai *ngIf="university_thiruvannamalai"></app-university-thiruvannamalai>
+
+<app-university-thoothukudi *ngIf="university_thoothukudi"></app-university-thoothukudi>
+
+<app-university-villupuram *ngIf="university_villupuram"></app-university-villupuram>
 
 
 <!-- *ngIf="SignedIn" -->
