--- a/src/app/colleges/university-panruti/university-panruti.component.html
+++ b/src/app/colleges/university-panruti/university-panruti.component.html
@@ -51,7 +51,7 @@
         <div class="cont-rows">
             <div class="college" style="text-align: center;">
                 <div class="college-name">
-                    University Departments of Anna University, MIT Campus, Guindy, Chennai-600025
+                    University College of Engineering, Panruti-607106
                 </div>
             </div>
             <br>
@@ -103,12 +103,14 @@
                         <tr>
                             <td id="tab-1">College Contact No</td>
                             <td id="tab-2">:</td>
-                            <td id="tab-3">044-22516002</td>
+                            <td id="tab-3">04142-241000</td>
                         </tr>
                         <tr>
                             <td id="tab-1">Email-ID</td>
                             <td id="tab-2">:</td>
-                            <td id="tab-3">deanmitt@annauniv.edu</td>
+                            <td id="tab-3">ucedean
+                                panruti@annauniv.edu
+                            </td>
                         </tr>
                     </tbody>
                 </table>
