--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -43,7 +43,7 @@
                 <input type="password" formControlName="password" id="input-code" class="form-control"
                     placeholder="Password">
                 <div style="color: red;" *ngIf="password.invalid && (password.touched || password.dirty)">
-                    <span class="error" *ngIf="password.errors?.required">*Enter vaild questions.</span>
+                    <span class="error" *ngIf="password.errors?.required">*Enter vaild password</span>
                 </div>
             </div>
 
