forgot page added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,6 +12,7 @@
 </header>
 <!-- Login -->
 
+<!-- <app-forgot-password></app-forgot-password> -->
 <app-login></app-login>
 <!-- <app-details-form></app-details-form> -->
 <!-- <app-college-name></app-college-name> -->
