--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,11 +10,15 @@
     <p id="sub-title" style="font-size: 1.5rem; color: beige; font-weight: 500;">GOVERNMENT OF TAMILNADU</p>
   </div>
 </header>
-<!-- Login -->
+
+
+<!-- <router-outlet></router-outlet> -->
+
 
 <!-- <app-forgot-password></app-forgot-password> -->
-<app-login></app-login>
-<!-- <app-details-form></app-details-form> -->
+<!-- <app-login></app-login> -->
+<!-- <app-sidebar></app-sidebar> -->
+<app-details-form></app-details-form>
 <!-- <app-college-name></app-college-name> -->
 <!-- <app-view-form></app-view-form> -->
 
