--- a/src/app/forgot-password/forgot-password.component.html
+++ b/src/app/forgot-password/forgot-password.component.html
@@ -7,7 +7,7 @@
         <p style="font-size: 25px; font-weight: 600;">Change Password</p>
 
         <div class="input-group mb-4 mt-4" id="login-input">
-            <input type="text" class="form-control" placeholder="Old Password">
+            <input type="text" formControlName="old_password" class="form-control" placeholder="Old Password">
             <!-- <div style="color: red;" *ngIf="email.invalid && (email.touched || email.dirty)">
                 <span class="error" *ngIf="email.errors?.required">*Email is Required.</span>
                 <span class="error" *ngIf="email.errors?.email">*Enter valid e-mail id.</span>
@@ -15,12 +15,12 @@
         </div>
 
         <div class="input-group mb-3 mt-4" id="login-input">
-            <input type="password" id="input-code" class="form-control" placeholder="New Password">
+            <input type="password" formControlName="new_password" class="form-control" placeholder="New Password">
         </div>
 
 
         <div class="input-group mb-3 mt-4" id="login-input">
-            <input type="password" id="input-code" class="form-control" placeholder="Confirm Password">
+            <input type="text" formControlName="confirm_password" class="form-control" placeholder="Confirm Password">
         </div>
 
         <button class="btn btn-outline-primary mt-4 mb-3" style=" border-radius: 14px;"
