--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,11 +4,12 @@
     *ngIf="!act_chennai && !alagapa && !anna_university_coimbatore && !anna_university_madurai && !anna_university_tirunelveli && !ceg_guindy && !cit_coimbatore && !gce_bargur && !gce_erode && !gce_salem && !gce_thirunelveli && !gct_coimabatore && !mit_chennai && !periyar_vellor && !psg_coimbatore && !thiagarajar_madurai && !university_ariyalur && !university_dindigul && !university_kanchepuram  && !university_nagercoil && !university_panruti  && !university_pattukodai && !university_ramanathapuram && !university_thiruchirappali  && !university_thirukkuvalai && !university_thiruvannamalai && !university_thoothukudi && !university_villupuram">
 
     <div class="portal-container" style="width: 100%; text-align: center;">
-        <p style=" font-size: 30px; color: green; font-weight: 600;">Online Post Graduate Assistantship and Non-Gate PG
+        <marquee behavior="alternate" style=" font-size: 30px; color: green; font-weight: 600;">Online Post Graduate
+            Assistantship and Non-Gate PG
             Scholars
             2021-2022
             (User Portal)
-        </p>
+        </marquee>
 
         <p style="font-size:19px; color: red;">
             *** Students are not allowed to enter details themselves. Only College authority is allowed to Login and
@@ -51,7 +52,7 @@
                 [disabled]="registerForm.invalid">Login
             </button>
 
-            <div (click)="forgot()"> Forgot password </div>
+            <div (click)="forgot()" style="margin-left: 190px; margin-top: 10px;"> Forgot password ? </div>
 
         </form>
 
