--- a/src/app/sidebar/sidebar.component.css
+++ b/src/app/sidebar/sidebar.component.css
@@ -4,29 +4,25 @@
     flex-wrap: wrap;
 }
 .cont-rows{
-    width: 81%;
-    /* height: 1700px; */
-    height: inherit;
-    margin-left: 20px;
-    margin-right: 20px;
+    width: 80%;
+    height: 750px;
+    margin-left: 60px;
     border-radius: 10px;
     box-shadow: 0 3px 10px rgb(0 0 0 / 0.8);
 }
-#detail-name{
-    width: 300px;
-    height: 30px;
+.contact_align{
+    margin-left: 50px;
 }
 .cont-navbar{
     width: 200px;
-    height: 1400px;
-    /* margin-top: -15px; */
+    height: 770px;
     background: #37DCF2;
     box-shadow: 0 3px 10px rgb(0 0 0 / 0.8);
 }
 .table1{
     height: 65px;
     font-family: sans-serif;
-    font-size: 20px;
+    font-size: 22px;
     color: white;
   }
   table tr td.table1:hover {
@@ -41,30 +37,40 @@
     color: aliceblue;
     font-size: 16px;
   }
-  .input_y_n{
-      text-transform: uppercase;
+.college-name{
+    font-size: 2.5rem;
+}
+#tab-1{
+    width: 200px;
+    font-size: 21px;
+    font-weight: bold;
+}
+#tab-2{
+    width: 200px;
+}
+#tab-3{
+    width: 200px;
+    font-size: 18px;
+}
+button:hover{
+    background: linear-gradient(to bottom,#599de0,#37DCF2);
+    color: aliceblue;
+    font-size: 16px;
   }
 
   @media(max-width: 600px)
   {
     .cont-navbar{
-        height: 680px;
         width: 100%;
+        height: 680px;
         margin-bottom: 30px;
     }
     .cont-rows{
+        height: 800px;
         width: 100%;
         margin: 0px;
     }
-    #detail-name{
-        width: 80px;
-    }
-    #detail-gama{
-        padding-left: -30px;
-        width: 1px;
-        /* background: red; */
-    }
-    .btn{
-        margin-left: 30px;
+    .college-name{
+        font-size: 1.8rem;
     }
   }
